--- a/Web_day_tieng_Anh/Areas/Lecturers/Views/Courses/Display.cshtml
+++ b/Web_day_tieng_Anh/Areas/Lecturers/Views/Courses/Display.cshtml
@@ -5,6 +5,7 @@
 }
 <link href="~/admin/css/styles.css" rel="stylesheet">
 <div style="background-color: #fff;">
+    <div class="container-fluid">
     <h4>Course</h4>
     <hr />
     <div class="row">
@@ -67,6 +68,7 @@
         <a asp-action="Delete" asp-route-id="@Model.CourseId" class="btn btn-danger mx-2" style="color: #000">Delete</a>
         <a asp-action="Index" class="btn btn-warning mx-2" style="color: #000">Back to List</a>
     </div>
+</div>
 </div>
 
 
