--- a/Web_day_tieng_Anh/Areas/Lecturers/Views/Lessons/Display.cshtml
+++ b/Web_day_tieng_Anh/Areas/Lecturers/Views/Lessons/Display.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Display";
 }
-
+<div class="container-fluid">
 <h1>@Html.DisplayFor(model => model.LessonName)</h1>
 
 <div>
@@ -36,17 +36,13 @@
     </div>
 
     <article>
-        @Html.Raw(Model.LessonDescription)
+            @Html.Raw("<div style='margin-top: 20px;'>" + Model.LessonDescription + "</div>")
     </article>
-       
-        
-           
-        
     
 </div>
 <div>
-    <a asp-action="Update" asp-route-id="@Model.LessionId" class="btn btn-primary" style="color: #000">Edit</a> |
+    <a asp-action="Update" asp-route-id="@Model.LessionId" class="btn btn-primary" style="color: #000">Edit</a>
     
     <a asp-controller="Lessons" asp-action="Index" asp-route-courseId="@Model.CourseId" class="btn btn-warning" style="color: #000;">Back to list</a>
 </div>
-
+</div>
