--- a/Web_day_tieng_Anh/Areas/Lecturers/Views/Questions/Update.cshtml
+++ b/Web_day_tieng_Anh/Areas/Lecturers/Views/Questions/Update.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Update";
 }
-
+<div class="container-fluid">
 <h1>Update</h1>
 
 <h4>Question</h4>
@@ -55,6 +55,7 @@
 
 <div class="mb-2">
     <a asp-controller="Questions" asp-action="Index" asp-route-testId="@Model.TestId" class="btn btn-primary" style="color: #000;">Back</a>
+</div>
 </div>
 
 @section Scripts {
