--- a/Web_day_tieng_Anh/Areas/Lecturers/Views/Courses/Add.cshtml
+++ b/Web_day_tieng_Anh/Areas/Lecturers/Views/Courses/Add.cshtml
@@ -3,9 +3,8 @@
 @{
     ViewData["Title"] = "Add";
 }
+<link href="~/admin/css/styles.css" rel="stylesheet">
 <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <!-- TinyMCE -->
     <script src="https://cdn.tiny.cloud/1/tvv1fwf3cnhtvlfxql1sp92p7vuw7mk3gj167aahzkwc68d6/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
     <script>
         tinymce.init({
@@ -20,8 +19,8 @@
         })
     </script>
 </head>
+<div class="container-fluid">
 <h1>Add</h1>
-
 <h4>Course</h4>
 <hr />
 <div class="row">
@@ -29,39 +28,36 @@
         <form asp-action="Add">
             <div class="col-md-4">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="form-group">
-                    <label asp-for="CourseName" class="control-label"></label>
-                    <input asp-for="CourseName" class="form-control" />
-                    <span asp-validation-for="CourseName" class="text-danger"></span>
-                </div>
-               @*  <div class="form-group">
-                    <label asp-for="CourseDescription" class="control-label"></label>
-                    <textarea id="tiny" name="CourseDescription" class="form-control"></textarea>
-                    <span asp-validation-for="CourseDescription" class="text-danger"></span>
-                </div> *@
-                 <div class="form-group">
-                    <label asp-for="CourseDescription" class="control-label"></label>
-                    <input asp-for="CourseDescription" class="form-control" />
-                    <span asp-validation-for="CourseDescription" class="text-danger"></span>
-                </div>
-                @*@<div class="col-sm-8">
-                    <textarea id="tiny" name="content"></textarea>
-                </div> *@
-                <div class="form-group">
-                    <label asp-for="Level" class="control-label"></label>
-                    <input asp-for="Level" class="form-control" />
-                    <span asp-validation-for="Level" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Price" class="control-label"></label>
-                    <input asp-for="Price" class="form-control" />
-                    <span asp-validation-for="Price" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Ratings" class="control-label"></label>
-                    <input asp-for="Ratings" class="form-control" />
-                    <span asp-validation-for="Ratings" class="text-danger"></span>
-                </div>
+            <div class="form-group">
+                <label asp-for="CourseName" class="control-label"></label>
+                <input asp-for="CourseName" class="form-control" style="width: 600px;" />
+                <span asp-validation-for="CourseName" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="CourseDescription" class="control-label"></label>
+                <textarea id="tiny" name="CourseDescription" class="form-control" style="width: 600px;"></textarea>
+                <span asp-validation-for="CourseDescription" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="Level" class="control-label"></label>
+                <input asp-for="Level" class="form-control" style="width: 600px;" />
+                <span asp-validation-for="Level" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="Price" class="control-label"></label>
+                <input asp-for="Price" class="form-control" style="width: 600px;" />
+                <span asp-validation-for="Price" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="Ratings" class="control-label"></label>
+                <input asp-for="Ratings" class="form-control" style="width: 600px;" />
+                <span asp-validation-for="Ratings" class="text-danger"></span>
+            </div>
+
                 <div class="form-group">
                     <input type="submit" value="Create" class="btn btn-primary" />
                 </div>
@@ -71,7 +67,8 @@
 </div>
 
 <div>
-    <a asp-action="Index" class="btn btn-warning mx-2 mb-3" style="color: #000">Back to List</a>
+    <a asp-action="Index" class="btn btn-warning mb-3" style="color: #000">Back to List</a>
+</div>
 </div>
 
 @section Scripts {
