--- a/Web_day_tieng_Anh/Areas/Lecturers/Views/Courses/Delete.cshtml
+++ b/Web_day_tieng_Anh/Areas/Lecturers/Views/Courses/Delete.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Delete";
 }
-
+<div class="container-fluid">
 <h1>Delete</h1>
 
 <h3>Are you sure you want to delete this?</h3>
@@ -49,7 +49,7 @@
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
-
+</div>
 @section Scripts {
     <script>
         document.getElementById("deleteForm").onsubmit = function () {
