--- a/Web_day_tieng_Anh/Areas/Lecturers/Views/Lessons/Add.cshtml
+++ b/Web_day_tieng_Anh/Areas/Lecturers/Views/Lessons/Add.cshtml
@@ -3,9 +3,8 @@
 @{
     ViewData["Title"] = "Add";
 }
-<link href="~/activetests/tests.js" rel="stylesheet">
+<link href="~/admin/css/styles.css" rel="stylesheet">
 <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- TinyMCE -->
     <script src="https://cdn.tiny.cloud/1/tvv1fwf3cnhtvlfxql1sp92p7vuw7mk3gj167aahzkwc68d6/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
     <script>
@@ -46,7 +45,7 @@
                 <span asp-validation-for="LessonDescription" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ImgUrl" class="control-label">Ảnh sản phẩm:</label>
+                <label asp-for="ImgUrl" class="control-label">Video:</label>
                 <input type="file" asp-for="ImgUrl" name="UpVideoUrl" class="form-control" />
                 <span asp-validation-for="ImgUrl" class="text-danger"></span>
             </div>
