--- a/Web_day_tieng_Anh/Areas/Lecturers/Views/Questions/Add.cshtml
+++ b/Web_day_tieng_Anh/Areas/Lecturers/Views/Questions/Add.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Add";
 }
 
+<div class="container-fluid">
 <h1>Add Question</h1>
 
 <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="~/admin/css/styles.css" rel="stylesheet">
     <script src="https://cdn.tiny.cloud/1/tvv1fwf3cnhtvlfxql1sp92p7vuw7mk3gj167aahzkwc68d6/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
     <script>
@@ -58,6 +58,7 @@
 
 <div>
     <a asp-controller="Questions" asp-action="Index" asp-route-testId="@ViewBag.TestId" class="btn btn-primary mx-2 mb-3" style="color: #000;">Back to list</a>
+</div>
 </div>
 
 @section Scripts {
