--- a/Web_day_tieng_Anh/Areas/Lecturers/Views/Questions/Delete.cshtml
+++ b/Web_day_tieng_Anh/Areas/Lecturers/Views/Questions/Delete.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Delete";
 }
-
+<div class="container-fluid">
 <h1>Delete</h1>
 
 <h3>Are you sure you want to delete this?</h3>
@@ -30,4 +30,5 @@
         <input type="submit" value="Delete" class="btn btn-danger" style="color: #000;" /> |
         <a asp-controller="Questions" asp-action="Index" asp-route-testId="@Model.TestId" class="btn btn-primary" style="color: #000;">Back to List</a>
     </form>
+</div>
 </div>
