--- a/Web_day_tieng_Anh/Areas/Lecturers/Views/Tests/Delete.cshtml
+++ b/Web_day_tieng_Anh/Areas/Lecturers/Views/Tests/Delete.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Delete";
 }
-
+<div class="container-fluid">
 <h1>Delete</h1>
 
 <h3>Are you sure you want to delete this?</h3>
@@ -36,6 +36,7 @@
         <input type="submit" value="Delete" class="btn btn-danger" style="color: #000;" /> |
         <a asp-controller="Tests" asp-action="Index" asp-route-courseId="@Model.CourseId" class="btn btn-primary" style="color: #000;">Back to list</a>
     </form>
+</div>
 </div>
 @section Scripts {
     <script>
