--- a/Web_day_tieng_Anh/Areas/Lecturers/Views/shared/_LayoutLecturer.cshtml
+++ b/Web_day_tieng_Anh/Areas/Lecturers/Views/shared/_LayoutLecturer.cshtml
@@ -126,6 +126,13 @@
                     <span>Information</span>
                 </a>
             </li>
+            <!-- Nav Item - Scores -->
+@*             <li class="nav-item">
+                <a class="nav-link" href="https://localhost:7010/Path/To/Your/Scores/Page">
+                    <i class="fas fa-fw fa-chart-line"></i>
+                    <span>Scores</span>
+                </a>
+            </li> *@
 
             <!-- Nav Item - Tables -->
             <li class="nav-item">
@@ -167,7 +174,7 @@
                     </button>
 
                     <!-- Topbar Search -->
-                    <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
+                   @*  <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
                         <div class="input-group">
                             <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..."
                                    aria-label="Search" aria-describedby="basic-addon2">
@@ -177,7 +184,7 @@
                                 </button>
                             </div>
                         </div>
-                    </form>
+                    </form> *@
 
                     <!-- Topbar Navbar -->
                     <ul class="navbar-nav ml-auto">
