--- a/Web_day_tieng_Anh/Views/Shared/_Layout.cshtml
+++ b/Web_day_tieng_Anh/Views/Shared/_Layout.cshtml
@@ -59,7 +59,7 @@
                             </ul>
                         </li> *@
                         <li class="megamenu has-dropdown">
-                            <a href="#"><span>class</span> <i class="bi bi-chevron-down"></i></a>
+                            <a href="#"><span>Class</span> <i class="bi bi-chevron-down"></i></a>
                             <ul>
                                 <li>
                                  
