--- a/Web_day_tieng_Anh/Views/Home/Class10.cshtml
+++ b/Web_day_tieng_Anh/Views/Home/Class10.cshtml
@@ -34,13 +34,24 @@
                 <div class="row">
                     @{
                         int count = 0;
+                        var images = new List<string> {
+
+                    "img/imgcourse/h3.jpg",
+                    "img/imgcourse/h4.jpg",
+
+                    "img/imgcourse/h6.jpg",
+                    "img/imgcourse/h7.jpg"
+                    };
+
                         foreach (var item in Model)
                         {
-                            if (count <= 6 && item.Level ==10)
+                            if (count <= 6 && item.Level == 10)
                             {
+                                var randomIndex = new Random().Next(0, images.Count); // Randomly select an index
+                                var randomImage = images[randomIndex]; // Get the randomly selected image path
                                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100" data-course="@item.CourseName">
                                     <div class="course-item">
-                                        <img src="~/img/course-1.jpg" class="img-fluid" alt="...">
+                                        <img src="~/@randomImage" class="img-fluid" alt="...">
                                         <div class="course-content">
                                             <div class="d-flex justify-content-between align-items-center mb-3">
                                                 <p class="category">@item.CourseName</p>
@@ -54,11 +65,7 @@
                                                     <img src="~/img/trainers/trainer-1-2.jpg" class="img-fluid" alt="">
                                                     <a href="" class="trainer-link">Antonio</a>
                                                 </div>
-                                                <div class="trainer-rank d-flex align-items-center">
-                                                    <i class="bi bi-person user-icon"></i>&nbsp;50
-                                                    &nbsp;&nbsp;
-                                                    <i class="bi bi-heart heart-icon"></i>&nbsp;65
-                                                </div>
+
                                             </div>
                                         </div>
                                     </div>
